# kangle

./: .travis.yml  AUTHORS  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  configure  configure.ac
etc/: config.xml
extworker/: KChildListen.cpp  KChildListen.h  KSocketStream.h  Makefile.am  Makefile.in  api_child.cpp  main.cpp
kasync/: kaddr.c  kaddr.h  kasync_file.c  kasync_file.h  kasync_worker.c  kasync_worker.h  katom.h  kbuf.c  kbuf.h  kconnection.c  kconnection.h  kcountable.h  kepoll_selector.c  kepoll_selector.h  kfeature.h  kfile.c  kfile.h  kforwin32.h  kgl_ssl.c  kgl_ssl.h  kkqueue_selector.c  kkqueue_selector.h  klib.c  klib.h  klist.h  klog.c  klog.h  kmalloc.c  kmalloc.h  kmalloc_debug.c  kmalloc_debug_win32.c  kmd5.c  kmd5.h  krbtree.c  krbtree.h  kselectable.c  kselectable.h  kselector.c  kselector.h  kselector_manager.c  (+12 more)
module/access/: KAddHeaderMark.h  KAuthMark.h  KAuthUserAcl.h  KCacheControlMark.h  KCloudIpAcl.h  KContentLengthAcl.h  KDstPortAcl.h  KFlagMark.h  KGSpeedLimitMark.h  KHeaderAcl.h  KHostAcl.h  KHttp10Mark.h  KLoadAvgAcl.h  KMethodAcl.h  KMultiAcl.h  KMultinAcl.h  KObjAlwaysOnAcl.h  KPathAcl.h  KPathSignMark.h  KRefererAcl.h  KRegContentMark.h  KRegFileAcl.h  KRegPathAcl.h  KRequestHeaderAcl.h  KResponseFlagMark.h  KResponseHeaderAcl.h  KRewriteMark.h  KSSLSerialAcl.h  KSelfIpAcl.h  KSelfPortAcl.h  KSpeedLimitMark.h  KSrcAcl.h  KStubStatusMark.h  KTimeAcl.h  KTryFileAcl.h  KUrlAcl.h
module/webdav/: KAttribute.h  KDavLock.cpp  KFSResource.h  KResource.h  Makefile.am  webdav.cpp
module/whm/: WhmCallMap.cpp  WhmDso.cpp  WhmShellProcess.cpp  WhmShellProcess.h  dllmain.cpp  stdafx.cpp  stdafx.h  whm.cpp
module/whm/whmdso/core/: core.cpp
root/: INSTALL  README  configure.ac
root/extworker/: KChildApiService.cpp  KChildApiService.h  Makefile.am  extworker.h  main.cpp
root/module/access/: KAuthUserAcl.h  KCacheControlMark.h  KContentLengthAcl.h  KHttp10Mark.h  KMultinAcl.h  KPathSignMark.h  KRefererAcl.h  KRequestHeaderAcl.h  KResponseFlagMark.h  KSSLSerialAcl.h  KSrcAcl.h  KTimeAcl.h  KTryFileAcl.h
root/module/webdav/: KAttribute.cpp  KDavLock.h  KFSResource.cpp  KWebDavService.cpp  Makefile.in
root/module/whm/: KWhmService.cpp  WhmDso.cpp  WhmPackageManage.cpp  WhmShell.cpp  WhmShellProcess.cpp  WhmShellProcess.h  WhmShellSession.cpp  dllmain.cpp
root/module/whm/whmdso/core/: core.cpp
root/src/: HttpCore.cpp  KAccessDso.h  KAccessParser.cpp  KAcserver.h  KAcserverManager.h  KAjpFetchObject.h  KAjpMessage.cpp  KApiDso.cpp  KApiDso.h  KApiEnv.h  KApiFetchObject.h  KApiPipeStream.cpp  KApiProcess.h  KAsyncFetchObject.cpp  KAsyncSelectable.h  KAsyncWorker.cpp  KAsyncWorker.h  KBaseVirtualHost.cpp  KBuffer.cpp  KCache.cpp  KCache.h  KCacheFetchObject.h  KCacheStream.cpp  KCdnContainer.cpp  KCdnContainer.h  KCgi.cpp  KCgiEnv.h  KCgiRedirect.cpp  KCgiRedirect.h  KChain.cpp  KChain.h  KChunked.h  KCmdPoolableRedirect.h  KCname.cpp  KConcatFetchObject.cpp  KCondWait.h  KConfig.cpp  KConfig.h  KConfigBuilder.cpp  KConfigBuilder.h  (+189 more)
root/webadmin/: core.whm  lang.xml  lang_tw.xml
src/: EdcodeUtils.cpp  HttpCore.cpp  HttpExt.cpp  KAccess.cpp  KAccess.h  KAccessDso.cpp  KAccessDso.h  KAccessDsoSupport.cpp  KAccessDsoSupport.h  KAcl.h  KAcserver.cpp  KAcserver.h  KAcserverManager.cpp  KAcserverManager.h  KAddr.cpp  KAddr.h  KAioSelectable.cpp  KAioSelectable.h  KAjpFetchObject.cpp  KAjpFetchObject.h  KAjpMessage.cpp  KAjpMessage.h  KApiDso.cpp  KApiEnv.cpp  KApiFetchObject.cpp  KApiFetchObject.h  KApiProcess.cpp  KApiProcess.h  KApiRedirect.cpp  KApiRedirect.h  KApiService.h  KAsyncFetchObject.cpp  KAsyncFetchObject.h  KAsyncFile.cpp  KAsyncFile.h  KAsyncWorker.cpp  KAsyncWorker.h  KAuthMark.cpp  KAutoBuffer.cpp  KAutoBuffer.h  (+396 more)
webadmin/: core.whm  kangle.css  lang_en.xml  lang_tw.xml  lang_zh.xml
www/: index.html
