AM_CXXFLAGS=-I ../kasync -I../src 
AM_LDFLAGS=-L../lib 
AM_CFLAGS = $(AM_CXXFLAGS)
AUTOMAKE_OPTIONS = subdir-objects
bin_PROGRAMS=extworker
extworker_SOURCES=api_child.cpp  extworker.h  KChildApiService.cpp  KChildApiService.h  KChildListen.cpp  KChildListen.h  main.cpp KSocketStream.h\
../src/EdcodeUtils.cpp ../src/KHttpExt.cpp ../src/KApiDso.cpp ../src/KApiEnv.cpp ../src/KBuffer.cpp ../src/KEnvInterface.cpp ../src/KFastcgiUtils.cpp ../src/KPipeStream.cpp ../src/KProcess.cpp ../src/KStream.cpp ../src/KStringBuf.cpp ../src/KCgiEnv.cpp ../src/process.cpp ../src/KAutoBuffer.cpp\
../kasync/ksocket.c\
../kasync/kthread.c\
../kasync/kfile.c\
../kasync/kmalloc.c\
../kasync/kmalloc_debug.c

