AM_CXXFLAGS=-fPIC
AM_LDFLAGS=-fPIC -shared
LIBS=
moduledir=$(bindir)
module_PROGRAMS=webdav.so
webdav_so_SOURCES=KAttribute.cpp  KDavLock.cpp  KFSResource.cpp  KResource.cpp  KWebDavService.cpp  KXmlDocument.cpp  webdav.cpp\
KAttribute.h  KDavLock.h  KFSResource.h  KResource.h  KResourceMaker.h  KWebDavService.h  KXmlDocument.h

